test/cases/compile_errors/invalid_continue_expression.zig
export fn f() void {
    continue;
}

// error
//
// :2:5: error: continue expression outside loop
